# TheIncuhEngine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.TqeyDs  README.md  license.txt
include/IncuhEngine/: stdScale.h
include/IncuhEngine/BSP/: BSPFace.hpp  BSPMesh.hpp
include/IncuhEngine/Engine/: AudioBase.hpp  Bindings.hpp  Camera.hpp  CubeMap.hpp  GameState.h  Image.hpp  Light.hpp  Material.hpp  Object.hpp  Shader.hpp  Window.hpp  stdScale.h
include/IncuhEngine/Engine/NPC/: n_baseNPC.hpp
include/IncuhEngine/Game/: GameMain.hpp  GameTransform.hpp  g_goodObject.hpp
include/IncuhEngine/Launcher/: LauncherArgs.hpp
include/IncuhEngine/Objects/: Mesh.hpp  Model.hpp
include/IncuhEngine/Overlay/: UI_Render.hpp
include/IncuhEngine/Physics/: PhysicsBox.hpp  PhysicsBoxController.hpp  PhysicsCapsuleController.hpp  PhysicsController.hpp  PhysicsCore.hpp  PhysicsMaterial.hpp  PhysicsMesh.hpp  PhysicsObject.hpp  PhysicsPointer.hpp  PhysicsTrigger.hpp  PhysicsTriggerCallback.hpp
include/IncuhEngine/Server/: Logging.h
include/IncuhEngine/World/: World.hpp  WorldLoader.hpp
licenses/: license.CBSP.txt  license.EGL.txt  license.IMGUI.txt  license.KHR.txt  license.assimp.txt  license.earcut.hpp.txt  license.fmt.txt  license.fx-gltf.txt  license.glad.txt  license.glm.txt  license.json.txt  license.physx.txt  license.pmp-library.txt  license.poly2tri.txt  license.sdl_gpu.txt  license.soloud.txt  license.txt  license.zlib.txt
shaders/: fragment.glsl  skybox_f.glsl  skybox_v.glsl  vertex.glsl
src/BSP/: BSPFace.cpp  BSPMesh.cpp
src/Engine/: AudioBase.cpp  Bindings.cpp  Camera.cpp  CubeMap.cpp  Image.cpp  Light.cpp  Material.cpp  Shader.cpp  Window.cpp
src/Engine/NPC/: n_baseNPC.cpp
src/Game/: GameMain.cpp  GameTransform.cpp
src/Launcher/: Launcher.cpp  LauncherArgs.cpp
src/Objects/: Mesh.cpp  Model.cpp
src/Overlay/: UI_Render.cpp
src/Physics/: PhysicsBox.cpp  PhysicsBoxController.cpp  PhysicsCapsuleController.cpp  PhysicsCore.cpp  PhysicsMesh.cpp  PhysicsTrigger.cpp  PhysicsTriggerCallback.cpp
src/Server/: Logging.cpp
src/World/: World.cpp  WorldLoader.cpp
src/extra/: glad.c
